<resources>
    <string name="app_name">Teacher Assistant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="classes_view_label">Twoje zajęcia</string>

    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="add_classes_btn_text">Dodaj zajęcia</string>
    <string name="delete_classes_btn_text">Usuń zajęcia</string>
    <string name="pick_classes_btn_text">Wybierz zajęcia:</string>
    <string name="study_class_name_text_hint">Nazwa grupy (zajęcia)</string>
    <string name="example_study_class_name_text">Np. \'\'Programowanie gr. 2 wtorki 10:00\'\'</string>
    <string name="add_new_class_text">Dodaj zajęcia</string>
    <string name="all_students_text">Wszyscy studenci:</string>
    <string name="add_student_btn_text">Dodaj studenta</string>
    <string name="delete_student_btn_text">Usuń studenta</string>
</resources>