<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllStudentsListFragment">

    <TextView
        android:id="@+id/pick_classes_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/all_students_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_students_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/pick_classes_text_view" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/add_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_student_btn_text"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/delete_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/delete_student_btn_text"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>