<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateNewClassFragment">

    <TextView
        android:id="@+id/classNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        android:text="@string/study_class_name_text_hint" />

    <EditText
        android:layout_marginHorizontal="15dp"
        android:id="@+id/classNameTextInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classNameTextView"

        android:ems="10"
        android:inputType="text"
        android:hint="@string/example_study_class_name_text"
        android:autofillHints="" />



<!--    <TextView-->
<!--        android:id="@+id/pick_students_text_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Studenci zapisani do zajęć:"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/classNameTextInput" />-->

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/students_selection_recycler_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:clipToPadding="false"-->
<!--        android:padding="16dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/pick_students_text_view" />-->



    <Button
        android:id="@+id/addNewClassButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_new_class_text"
        android:layout_marginBottom="10dp">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>